# dns-tools

./: .gitignore  CMakeLists.txt
include/: DnsLookup.hpp
src/: DnsLookup.cpp  main.cpp  resources.qrc  resources.rc
